[tool.poetry]
name = "ytlp"
version = "0.1.0"
description = ""
authors = ["Leonpei <peileon2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.40"
openai-whisper = "^20240930"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
